// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly already signed in 1`] = `
<div>
  <div
    class="menu-btn-container"
  >
    <img
      class="icon"
      src="img/logo-line.svg"
    />
    <img
      class="icon-arrow"
      src="img/icon-arrow-d.svg"
    />
  </div>
  <div
    class="rc-menu-container"
  >
    <ul
      aria-label="Menu"
      class="rc-menu rc-menu--open rc-menu--animation rc-menu--dir-bottom"
      role="menu"
      style="left: 0px; top: 0px;"
      tabindex="-1"
    >
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          File
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          Edit
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          View
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          Machines
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          Tools
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="true"
          aria-haspopup="true"
          class="rc-menu__item rc-menu__item--open"
          role="menuitem"
          tabindex="-1"
        >
          Account
        </div>
        <ul
          aria-label="Account"
          class="rc-menu rc-menu--open rc-menu--animation rc-menu--dir-right"
          role="menu"
          style="left: 0px; top: 0px;"
          tabindex="-1"
        >
          <li
            class="rc-menu__item"
            role="menuitem"
            tabindex="-1"
          >
            Log out (tester@flux3dp.com)
          </li>
          <li
            class="rc-menu__item"
            role="menuitem"
            tabindex="-1"
          >
            Design Market
          </li>
          <li
            class="rc-menu__item"
            role="menuitem"
            tabindex="-1"
          >
            Manage My Account
          </li>
        </ul>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          Help
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should render correctly open the browser and reach the correct page 1`] = `
<div>
  <div
    class="menu-btn-container"
  >
    <img
      class="icon"
      src="img/logo-line.svg"
    />
    <img
      class="icon-arrow"
      src="img/icon-arrow-d.svg"
    />
  </div>
  <div
    class="rc-menu-container"
  />
</div>
`;

exports[`should render correctly open the browser and reach the correct page 2`] = `
<div>
  <div
    class="menu-btn-container"
  >
    <img
      class="icon"
      src="img/logo-line.svg"
    />
    <img
      class="icon-arrow"
      src="img/icon-arrow-d.svg"
    />
  </div>
  <div
    class="rc-menu-container"
  >
    <ul
      aria-label="Menu"
      class="rc-menu rc-menu--open rc-menu--animation rc-menu--dir-bottom"
      role="menu"
      style="left: 0px; top: 0px;"
      tabindex="-1"
    >
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          File
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          Edit
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          View
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          Machines
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          Tools
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          Account
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          Help
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should render correctly open the browser and reach the correct page 3`] = `
<div>
  <div
    class="menu-btn-container"
  >
    <img
      class="icon"
      src="img/logo-line.svg"
    />
    <img
      class="icon-arrow"
      src="img/icon-arrow-d.svg"
    />
  </div>
  <div
    class="rc-menu-container"
  >
    <ul
      aria-label="Menu"
      class="rc-menu rc-menu--open rc-menu--animation rc-menu--dir-bottom"
      role="menu"
      style="left: 0px; top: 0px;"
      tabindex="-1"
    >
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          File
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          Edit
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          View
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          Machines
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          Tools
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          Account
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="true"
          aria-haspopup="true"
          class="rc-menu__item rc-menu__item--open"
          role="menuitem"
          tabindex="-1"
        >
          Help
        </div>
        <ul
          aria-label="Help"
          class="rc-menu rc-menu--open rc-menu--animation rc-menu--dir-right"
          role="menu"
          style="left: 0px; top: 0px;"
          tabindex="-1"
        >
          <li
            class="rc-menu__item"
            role="menuitem"
            tabindex="-1"
          >
            About Beam Studio
          </li>
          <li
            class="rc-menu__item"
            role="menuitem"
            tabindex="-1"
          >
            Show Start Tutorial
          </li>
          <li
            class="rc-menu__item"
            role="menuitem"
            tabindex="-1"
          >
            Show Interface Introduction
          </li>
          <li
            class="rc-menu__item"
            role="menuitem"
            tabindex="-1"
          >
            Hand Gesture Introduction
          </li>
          <li
            class="rc-menu__item"
            role="menuitem"
            tabindex="-1"
          >
            Change Logs
          </li>
          <li
            class="rc-menu__item"
            role="menuitem"
            tabindex="-1"
          >
            Help Center
          </li>
          <li
            class="rc-menu__item"
            role="menuitem"
            tabindex="-1"
          >
            Keyboard shortcuts
          </li>
          <li
            class="rc-menu__item"
            role="menuitem"
            tabindex="-1"
          >
            Contact Us
          </li>
          <li
            class="rc-menu__divider"
            role="separator"
          />
          <li
            class="rc-menu__item"
            role="menuitem"
            tabindex="-1"
          >
            Community Forum
          </li>
          <li
            class="rc-menu__item"
            role="menuitem"
            tabindex="-1"
          >
            Follow Us
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should render correctly test checkbox menu item 1`] = `
<div>
  <div
    class="menu-btn-container"
  >
    <img
      class="icon"
      src="img/logo-line.svg"
    />
    <img
      class="icon-arrow"
      src="img/icon-arrow-d.svg"
    />
  </div>
  <div
    class="rc-menu-container"
  />
</div>
`;

exports[`should render correctly test checkbox menu item 2`] = `
<div>
  <div
    class="menu-btn-container"
  >
    <img
      class="icon"
      src="img/logo-line.svg"
    />
    <img
      class="icon-arrow"
      src="img/icon-arrow-d.svg"
    />
  </div>
  <div
    class="rc-menu-container"
  >
    <ul
      aria-label="Menu"
      class="rc-menu rc-menu--open rc-menu--animation rc-menu--dir-bottom"
      role="menu"
      style="left: 0px; top: 0px;"
      tabindex="-1"
    >
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          File
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          Edit
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="true"
          aria-haspopup="true"
          class="rc-menu__item rc-menu__item--open"
          role="menuitem"
          tabindex="-1"
        >
          View
        </div>
        <ul
          aria-label="View"
          class="rc-menu rc-menu--open rc-menu--animation rc-menu--dir-right"
          role="menu"
          style="left: 0px; top: 0px;"
          tabindex="-1"
        >
          <li
            class="rc-menu__item rc-menu__item--type-checkbox"
            role="menuitem"
            tabindex="-1"
          >
            <span
              class="action"
            >
              Zoom In
            </span>
            <span
              class="hotkey"
            >
              ⌘+
            </span>
          </li>
          <li
            class="rc-menu__item rc-menu__item--type-checkbox"
            role="menuitem"
            tabindex="-1"
          >
            <span
              class="action"
            >
              Zoom Out
            </span>
            <span
              class="hotkey"
            >
              ⌘-
            </span>
          </li>
          <li
            class="rc-menu__item rc-menu__item--type-checkbox"
            role="menuitem"
            tabindex="-1"
          >
            Fit to Window Size
          </li>
          <li
            aria-checked="false"
            class="rc-menu__item rc-menu__item--type-checkbox"
            role="menuitemcheckbox"
            tabindex="-1"
          >
            Auto Fit to Window Size
          </li>
          <li
            class="rc-menu__divider"
            role="separator"
          />
          <li
            aria-checked="false"
            class="rc-menu__item rc-menu__item--type-checkbox"
            role="menuitemcheckbox"
            tabindex="-1"
          >
            Show Grids
          </li>
          <li
            aria-checked="false"
            class="rc-menu__item rc-menu__item--type-checkbox"
            role="menuitemcheckbox"
            tabindex="-1"
          >
            Show Rulers
          </li>
          <li
            aria-checked="false"
            class="rc-menu__item rc-menu__item--type-checkbox"
            role="menuitemcheckbox"
            tabindex="-1"
          >
            Use Layer Color
          </li>
          <li
            aria-checked="false"
            class="rc-menu__item rc-menu__item--type-checkbox"
            role="menuitemcheckbox"
            tabindex="-1"
          >
            Auto Align
          </li>
          <li
            aria-checked="false"
            class="rc-menu__item rc-menu__item--type-checkbox"
            role="menuitemcheckbox"
            tabindex="-1"
          >
            Anti-Aliasing
          </li>
        </ul>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          Machines
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          Tools
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          Account
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          Help
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should render correctly test checkbox menu item 3`] = `
<div>
  <div
    class="menu-btn-container"
  >
    <img
      class="icon"
      src="img/logo-line.svg"
    />
    <img
      class="icon-arrow"
      src="img/icon-arrow-d.svg"
    />
  </div>
  <div
    class="rc-menu-container"
  >
    <ul
      aria-label="Menu"
      class="rc-menu rc-menu--closing rc-menu--animation rc-menu--dir-bottom"
      role="menu"
      style="left: 0px; top: 0px;"
      tabindex="-1"
    >
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          File
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          Edit
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          View
        </div>
        <ul
          aria-label="View"
          class="rc-menu rc-menu--closing rc-menu--animation rc-menu--dir-right"
          role="menu"
          style="left: 0px; top: 0px;"
          tabindex="-1"
        >
          <li
            class="rc-menu__item rc-menu__item--type-checkbox"
            role="menuitem"
            tabindex="-1"
          >
            <span
              class="action"
            >
              Zoom In
            </span>
            <span
              class="hotkey"
            >
              ⌘+
            </span>
          </li>
          <li
            class="rc-menu__item rc-menu__item--type-checkbox"
            role="menuitem"
            tabindex="-1"
          >
            <span
              class="action"
            >
              Zoom Out
            </span>
            <span
              class="hotkey"
            >
              ⌘-
            </span>
          </li>
          <li
            class="rc-menu__item rc-menu__item--type-checkbox"
            role="menuitem"
            tabindex="-1"
          >
            Fit to Window Size
          </li>
          <li
            aria-checked="false"
            class="rc-menu__item rc-menu__item--type-checkbox"
            role="menuitemcheckbox"
            tabindex="-1"
          >
            Auto Fit to Window Size
          </li>
          <li
            class="rc-menu__divider"
            role="separator"
          />
          <li
            aria-checked="false"
            class="rc-menu__item rc-menu__item--type-checkbox"
            role="menuitemcheckbox"
            tabindex="-1"
          >
            Show Grids
          </li>
          <li
            aria-checked="true"
            class="rc-menu__item rc-menu__item--type-checkbox rc-menu__item--checked"
            role="menuitemcheckbox"
            tabindex="-1"
          >
            Show Rulers
          </li>
          <li
            aria-checked="false"
            class="rc-menu__item rc-menu__item--type-checkbox"
            role="menuitemcheckbox"
            tabindex="-1"
          >
            Use Layer Color
          </li>
          <li
            aria-checked="false"
            class="rc-menu__item rc-menu__item--type-checkbox"
            role="menuitemcheckbox"
            tabindex="-1"
          >
            Auto Align
          </li>
          <li
            aria-checked="false"
            class="rc-menu__item rc-menu__item--type-checkbox"
            role="menuitemcheckbox"
            tabindex="-1"
          >
            Anti-Aliasing
          </li>
        </ul>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          Machines
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          Tools
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          Account
        </div>
      </li>
      <li
        class="rc-menu__submenu"
        role="presentation"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="rc-menu__item"
          role="menuitem"
          tabindex="-1"
        >
          Help
        </div>
      </li>
    </ul>
  </div>
</div>
`;
